tests/diagnostics/tests/ui/missing_from_custom.stderr
error[E0277]: recipe content `Foo` can't bake back into `Cow<'static, str>`
  --> tests/ui/missing_from_custom.rs:21:20
   |
21 |     type Content = Foo;
   |                    ^^^ try using `BakeFrom<Foo>`
   |
help: the trait `BakeInto<Cow<'static, str>>` is not implemented for `Foo`
  --> tests/ui/missing_from_custom.rs:9:1
   |
 9 | struct Foo;
   | ^^^^^^^^^^
   = note: for non-foreign types, consider providing a conversion by implementing `From<Foo>` for `Cow<'static, str>`
note: required by a bound in `granola::html::PTag::Content`
  --> $WORKSPACE/crates/granola/src/html/elements/text_content/p.rs
   |
   | #[derive(Debug, Clone, Default, Template, Granola, Recipe)]
   |                                                    ^^^^^^ required by this bound in `PTag::Content`
   = note: this error originates in the derive macro `Recipe` (in Nightly builds, run with -Z macro-backtrace for more info)
